--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm tsc -b && node ./dist/index.js"
+    "build": "npx tsc -b",
+    "dev": "npx tsc -b && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3"
   }
 }
